--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dagi211.github.io/lib-man-sys/",
+  "homepage": "https://dagi211.github.io/lib-man-sys",
   "name": "chart_js",
   "version": "0.1.0",
   "private": true,
